--- a/LeetCode/1101-1110/1106. 解析布尔表达式（困难）.md
+++ b/LeetCode/1101-1110/1106. 解析布尔表达式（困难）.md
@@ -98,33 +98,36 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function parseBoolExpr(s: string): boolean {
-    function calc(a: string, b: string, op: string): string {
-        const x = a == 't', y = b == 't'
-        const ans = op == '|' ? x || y : x && y
-        return ans ? 't' : 'f'
-    }
-    const nums = new Array<string>(s.length).fill(''), ops = new Array<string>(s.length).fill('')
-    let idx1 = 0, idx2 = 0
-    for (const c of s) {
-        if (c == ',') continue
-        if (c == 't' || c == 'f') nums[idx1++] = c
-        if (c == '|' || c == '&' || c == '!') ops[idx2++] = c
-        if (c == '(') nums[idx1++] = '-'
-        if (c == ')') {
-            let op = ops[--idx2], cur = ' '
-            while (idx1 > 0 && nums[idx1 - 1] != '-') {
-                const top = nums[--idx1]
-                cur = cur == ' ' ? top : calc(top, cur, op)
+C++ 代码：
+```C++
+class Solution {
+public:
+    bool parseBoolExpr(string s) {
+        deque<char> nums, ops;
+        for (char c : s) {
+            if (c == ',') continue;
+            if (c == 't' || c == 'f') nums.push_back(c);
+            if (c == '|' || c == '&' || c == '!') ops.push_back(c);
+            if (c == '(') nums.push_back('-');
+            if (c == ')') {
+                char op = ops.back(); ops.pop_back();
+                char cur = ' ';
+                while (!nums.empty() && nums.back() != '-') {
+                    char top = nums.back(); nums.pop_back();
+                    cur = cur == ' ' ? top : calc(top, cur, op);
+                }
+                if (op == '!') cur = cur == 't' ? 'f' : 't';
+                nums.pop_back(); nums.push_back(cur);
             }
-            if (op == '!') cur = cur == 't' ? 'f' : 't'
-            idx1--; nums[idx1++] = cur
         }
+        return nums.back() == 't';
     }
-    return nums[idx1 - 1] == 't'
-}
+    char calc(char a, char b, char op) {
+        bool x = a == 't', y = b == 't';
+        bool ans = op == '|' ? x | y : x & y;
+        return ans ? 't' : 'f';
+    }
+};
 ```
 Python 代码：
 ```Python
@@ -154,6 +157,34 @@ class Solution:
                 nums.pop()
                 nums.append(cur)
         return nums[-1] == 't'
+```
+TypeScript 代码：
+```TypeScript
+function parseBoolExpr(s: string): boolean {
+    function calc(a: string, b: string, op: string): string {
+        const x = a == 't', y = b == 't'
+        const ans = op == '|' ? x || y : x && y
+        return ans ? 't' : 'f'
+    }
+    const nums = new Array<string>(s.length).fill(''), ops = new Array<string>(s.length).fill('')
+    let idx1 = 0, idx2 = 0
+    for (const c of s) {
+        if (c == ',') continue
+        if (c == 't' || c == 'f') nums[idx1++] = c
+        if (c == '|' || c == '&' || c == '!') ops[idx2++] = c
+        if (c == '(') nums[idx1++] = '-'
+        if (c == ')') {
+            let op = ops[--idx2], cur = ' '
+            while (idx1 > 0 && nums[idx1 - 1] != '-') {
+                const top = nums[--idx1]
+                cur = cur == ' ' ? top : calc(top, cur, op)
+            }
+            if (op == '!') cur = cur == 't' ? 'f' : 't'
+            idx1--; nums[idx1++] = cur
+        }
+    }
+    return nums[idx1 - 1] == 't'
+}
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
