--- a/LeetCode/1201-1210/1210. 穿过迷宫的最少移动次数（困难）.md
+++ b/LeetCode/1201-1210/1210. 穿过迷宫的最少移动次数（困难）.md
@@ -8,7 +8,9 @@ Tag : 「BFS」
 
 你还记得那条风靡全球的贪吃蛇吗？
 
-我们在一个 `n*n` 的网格上构建了新的迷宫地图，蛇的长度为 `2`，也就是说它会占去两个单元格。蛇会从左上角（`(0, 0)` 和 `(0, 1)`）开始移动。我们用 `0` 表示空单元格，用 `1` 表示障碍物。蛇需要移动到迷宫的右下角（`(n-1, n-2)` 和 `(n-1, n-1)`）。
+我们在一个 `n*n` 的网格上构建了新的迷宫地图，蛇的长度为 `2`，也就是说它会占去两个单元格。蛇会从左上角（`(0, 0)` 和 `(0, 1)`）开始移动。我们用 `0` 表示空单元格，用 `1` 表示障碍物。
+
+蛇需要移动到迷宫的右下角（`(n-1, n-2)` 和 `(n-1, n-1)`）。
 
 每次移动，蛇可以这样走：
 
@@ -75,8 +77,7 @@ Tag : 「BFS」
 
 在得到新蛇尾位置 $(nx, ny)$ 之后，计算新蛇头的位置 $(tx, ty)$。需要确保整条蛇没有越界，没有碰到障碍物，并且旋转转移时，额外检查 $(x + 1, y + 1)$ 位置是否合法。
 
-
-代码：
+Java 代码：
 ```Java
 class Solution {
     int[][] dirs = new int[][]{{1,0,0},{0,1,0},{0,0,1}};
@@ -104,6 +105,85 @@ class Solution {
         return -1;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minimumMoves(vector<vector<int>>& g) {
+        vector<vector<int>> dirs = {{1,0,0}, {0,1,0}, {0,0,1}};
+        int n = g.size();
+        queue<vector<int>> d;
+        d.push({0, 0, 0, 0});
+        vector<vector<vector<bool>>> vis(n, vector<vector<bool>>(n, vector<bool>(2, false)));
+        vis[0][0][0] = true;
+        while (!d.empty()) {
+            vector<int> info = d.front();
+            d.pop();
+            int x = info[0], y = info[1], cd = info[2], step = info[3];
+            for (vector<int>& dir : dirs) {
+                int nx = x + dir[0], ny = y + dir[1], nd = cd ^ dir[2]; 
+                int tx = nd == 0 ? nx : nx + 1, ty = nd == 0 ? ny + 1 : ny; 
+                if (nx >= n || ny >= n || tx >= n || ty >= n) continue;
+                if (g[nx][ny] == 1 || g[tx][ty] == 1) continue;   
+                if (vis[nx][ny][nd]) continue;
+                if (cd != nd && g[x + 1][y + 1] == 1) continue; 
+                if (nx == n - 1 && ny == n - 2 && nd == 0) return step + 1;
+                d.push({nx, ny, nd, step + 1});
+                vis[nx][ny][nd] = true;
+            }
+        }
+        return -1;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minimumMoves(self, g: List[List[int]]) -> int:
+        dirs = [(1, 0, 0), (0, 1, 0), (0, 0, 1)]
+        n = len(g)
+        d = deque([(0,0,0,0)])
+        vis = [[[0]*2 for _ in range(n)] for _ in range(n)]
+        vis[0][0][0] = 1
+        while d:
+            x, y, cd, step = d.popleft()
+            for dir in dirs:
+                nx, ny, nd = x + dir[0], y + dir[1], cd ^ dir[2]
+                tx, ty = nx + (nd == 1), ny + (nd == 0)
+                if nx >= n or ny >= n or tx >= n or ty >= n: continue
+                if g[nx][ny] == 1 or g[tx][ty] == 1: continue
+                if vis[nx][ny][nd]: continue
+                if cd != nd and g[x + 1][y + 1] == 1: continue
+                if nx == n - 1 and ny == n - 2 and nd == 0: return step + 1
+                d.append((nx, ny, nd, step + 1))
+                vis[nx][ny][nd] = 1
+        return -1
+```
+TypeScript 代码：
+```TypeScript
+function minimumMoves(g: number[][]): number {
+    const n = g.length;
+    const d: [number, number, number, number][] = [[0,0,0,0]];
+    const vis: boolean[][][] = Array.from({ length: n }, () => Array.from({ length: n }, () => [false, false]));
+    vis[0][0][0] = true;
+    const dirs: [number, number, number][] = [[1,0,0], [0,1,0], [0,0,1]];
+    while (d.length > 0) {
+        const [x, y, cd, step] = d.shift()!;
+        for (const dir of dirs) {
+            const nx = x + dir[0], ny = y + dir[1], nd = cd ^ dir[2];
+            const tx = nd === 0 ? nx : nx + 1, ty = nd === 0 ? ny + 1 : ny;
+            if (nx >= n || ny >= n || tx >= n || ty >= n) continue;
+            if (g[nx][ny] === 1 || g[tx][ty] === 1) continue
+            if (vis[nx][ny][nd]) continue;
+            if (cd !== nd && g[x + 1][y + 1] === 1) continue;
+            if (nx === n - 1 && ny === n - 2 && nd === 0) return step + 1;
+            d.push([nx, ny, nd, step + 1]);
+            vis[nx][ny][nd] = true;
+        }
+    }
+    return -1;
+};
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n^2 \times C)$，其中 $C = 2$ 代表蛇可变状态方向
