--- a/LeetCode/1221-1230/1222. 可以攻击国王的皇后（中等）.md
+++ b/LeetCode/1221-1230/1222. 可以攻击国王的皇后（中等）.md
@@ -48,9 +48,9 @@ Tag : 「模拟」、「BFS」
 
 提示：
 * $1 <= queens.length <= 63$
-* $queens[i].length == 2$
+* $queens[i].length = 2$
 * $0 <= queens[i][j] < 8$
-* $king.length == 2$
+* $king.length = 2$
 * $0 <= king[0], king[1] < 8$
 * 一个棋盘格上最多只能放置一枚棋子。
 
@@ -82,7 +82,9 @@ class Solution {
                     checked[i] = true;
                 } else {
                     if (!vis[nx][ny]) continue;
-                    add(ans, nx, ny);
+                    List<Integer> list = new ArrayList<>();
+                    list.add(nx); list.add(ny);
+                    ans.add(list);
                     checked[i] = true;
                 }
             }
@@ -90,12 +92,88 @@ class Solution {
         }
         return ans;
     }
-    void add(List<List<Integer>> ans, int x, int y) {
-        List<Integer> list = new ArrayList<>();
-        list.add(x); list.add(y);
-        ans.add(list);
-    }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<int>> queensAttacktheKing(vector<vector<int>>& queens, vector<int>& king) {
+        vector<vector<int>> dirs {{1,0},{0,1},{0,-1},{-1,0},{1,1},{-1,-1},{1,-1},{-1,1}};
+        vector<vector<int>> ans;
+        vector<vector<bool>> vis(8, vector<bool>(8, false));
+        for (auto& queen : queens) vis[queen[0]][queen[1]] = true;
+        int x = king[0], y = king[1], step = 1;
+        vector<bool> checked(8, false);
+        while (step <= 8) {
+            for (int i = 0; i < 8; i++) {
+                if (checked[i]) continue;
+                int nx = x + step * dirs[i][0];
+                int ny = y + step * dirs[i][1];
+                if (nx < 0 || nx >= 8 || ny < 0 || ny >= 8) {
+                    checked[i] = true;
+                } else {
+                    if (!vis[nx][ny]) continue;
+                    ans.push_back({nx, ny});
+                    checked[i] = true;
+                }
+            }
+            step++;
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def queensAttacktheKing(self, queens: List[List[int]], king: List[int]) -> List[List[int]]:
+        dirs = [[1,0],[0,1],[0,-1],[-1,0],[1,1],[-1,-1],[1,-1],[-1,1]]
+        vis = [[False] * 8 for _ in range(8)]
+        for q in queens:
+            vis[q[0]][q[1]] = True
+        x, y = king
+        ans = []
+        checked = [False] * 8
+        step = 1
+        while step <= 8:
+            for i in range(8):
+                if checked[i]: continue
+                nx, ny = x + dirs[i][0] * step, y + dirs[i][1] * step
+                if nx < 0 or nx >= 8 or ny < 0 or ny >= 8:
+                    checked[i] = True
+                else:
+                    if not vis[nx][ny]: continue
+                    ans.append([nx, ny])
+                    checked[i] = True
+            step += 1
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function queensAttacktheKing(queens: number[][], king: number[]): number[][] {
+    let dirs = [[1,0],[0,1],[0,-1],[-1,0],[1,1],[-1,-1],[1,-1],[-1,1]];
+    let vis: boolean[][] = Array.from({length:8},()=>Array(8).fill(false));
+    for (let q of queens) vis[q[0]][q[1]] = true;
+    let x = king[0], y = king[1], step = 1;
+    let ans: number[][] = [];
+    let checked: boolean[] = Array(8).fill(false);
+    while (step <= 8) {
+        for (let i = 0; i < 8; i++) {
+            if (checked[i]) continue;
+            let nx = x + dirs[i][0] * step, ny = y + dirs[i][1] * step;
+            if (nx < 0 || nx >= 8 || ny < 0 || ny >= 8) {
+                checked[i] = true;
+            } else {
+                if (!vis[nx][ny]) continue;
+                ans.push([nx, ny]);
+                checked[i] = true;
+            }
+        }
+        step++;
+    }
+    return ans;
+};
 ```
 * 时间复杂度：$O(C)$，其中 $C = 8 \times 8$ 为棋盘总大小
 * 空间复杂度：$O(C)$，其中 $C = 8 \times 8$ 为棋盘总大小
@@ -109,8 +187,6 @@ class Solution {
 相比于直接模拟，`BFS`  无须使用额外变量记录处理过的方向以及当前位置与国王的距离。
 
 Java 代码：
-
-
 ```Java
 class Solution {
     int[][] dirs = new int[][]{{1,0},{0,1},{0,-1},{-1,0},{1,1},{-1,-1},{1,-1},{-1,1}};
@@ -140,6 +216,87 @@ class Solution {
         return ans;
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    vector<vector<int>> queensAttacktheKing(vector<vector<int>>& queens, vector<int>& king) {
+        vector<vector<int>> dirs = {{1,0},{0,1},{0,-1},{-1,0},{1,1},{-1,-1},{1,-1},{-1,1}};
+        vector<vector<bool>> vis(8, vector<bool>(8, false));
+        for (vector<int>& queen : queens) vis[queen[0]][queen[1]] = true;
+        deque<vector<int>> d;
+        for (int i = 0; i < 8; i++) {
+            int x = king[0] + dirs[i][0], y = king[1] + dirs[i][1];
+            if (x < 0 || x >= 8 || y < 0 || y >= 8) continue;
+            d.push_back({x, y, i});
+        }
+        vector<vector<int>> res;
+        while (!d.empty()) {
+            vector<int> cur = d.front();
+            d.pop_front();
+            if (vis[cur[0]][cur[1]]) {
+                res.push_back({cur[0], cur[1]});
+            } else {
+                int nx = cur[0] + dirs[cur[2]][0], ny = cur[1] + dirs[cur[2]][1];
+                if (nx < 0 || nx >= 8 || ny < 0 || ny >= 8) continue;
+                d.push_back({nx, ny, cur[2]});
+            }
+        }
+        return res;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def queensAttacktheKing(self, queens, king):
+        dirs = [[1,0],[0,1],[0,-1],[-1,0],[1,1],[-1,-1],[1,-1],[-1,1]]
+        vis = [[False]*8 for _ in range(8)]
+        for q in queens: vis[q[0]][q[1]] = True
+        d = deque()
+        for i in range(8):
+            x = king[0] + dirs[i][0]
+            y = king[1] + dirs[i][1]
+            if x < 0 or x >= 8 or y < 0 or y >= 8: continue
+            d.append([x, y, i])
+        ans = []
+        while d:
+            cur = d.popleft()
+            if vis[cur[0]][cur[1]]:
+                ans.append([cur[0], cur[1]])
+            else:
+                x = cur[0] + dirs[cur[2]][0]
+                y = cur[1] + dirs[cur[2]][1]
+                if x < 0 or x >= 8 or y < 0 or y >= 8: continue
+                d.append([x, y, cur[2]])
+        return ans
+```
+TypeScript 代码：
+```TypeScript
+function queensAttacktheKing(queens: number[][], king: number[]): number[][] {
+    let dirs = [[1,0],[0,1],[0,-1],[-1,0],[1,1],[-1,-1],[1,-1],[-1,1]];
+    let vis: boolean[][] = Array(8).fill(false).map(() => Array(8).fill(false));
+    queens.forEach(q => vis[q[0]][q[1]] = true);
+    let d: number[][] = [];
+    for (let i = 0; i < 8; i++) {
+        let x = king[0] + dirs[i][0], y = king[1] + dirs[i][1];
+        if (x < 0 || x >= 8 || y < 0 || y >= 8) continue;
+        d.push([x, y, i]);
+    }
+    let res = [];
+    while (d.length !== 0) {
+        let cur = d.shift();
+        if (vis[cur[0]][cur[1]]) {
+            res.push([cur[0], cur[1]]);
+        } else {
+            let x = cur[0] + dirs[cur[2]][0], y = cur[1] + dirs[cur[2]][1];
+            if (x < 0 || x >= 8 || y < 0 || y >= 8) continue;
+            d.push([x, y, cur[2]]);
+        }
+    }
+    return res;
+};
 ```
 * 时间复杂度：$O(C)$，其中 $C = 4 \times 8$ 为四条线的总步数
 * 空间复杂度：$O(C)$，其中 $C = 8 \times 8$ 为棋盘总大小
