--- a/LeetCode/1461-1470/1465. 切割后面积最大的蛋糕（中等）.md
+++ b/LeetCode/1461-1470/1465. 切割后面积最大的蛋糕（中等）.md
@@ -6,12 +6,12 @@ Tag : 「贪心」、「模拟」
 
 
 
-矩形蛋糕的高度为 `h` 且宽度为 `w`，给你两个整数数组 `horizontalCuts` 和 `verticalCuts`，其中：
+矩形蛋糕的高度为 `h` 且宽度为 `w`，给你两个整数数组 `hs` 和 `vs`，其中：
 
-* `horizontalCuts[i]` 是从矩形蛋糕顶部到第  `i` 个水平切口的距离
-* `verticalCuts[j]` 是从矩形蛋糕的左侧到第 `j` 个竖直切口的距离
+* `hs[i]` 是从矩形蛋糕顶部到第  `i` 个水平切口的距离
+* `vs[j]` 是从矩形蛋糕的左侧到第 `j` 个竖直切口的距离
 
-请你按数组 `horizontalCuts` 和 `verticalCuts` 中提供的水平和竖直位置切割后，请你找出**面积最大**的那份蛋糕，并返回其**面积**。
+请你按数组 `hs` 和 `vs` 中提供的水平和竖直位置切割后，请你找出**面积最大**的那份蛋糕，并返回其**面积**。
 
 由于答案可能是一个很大的数字，因此需要将结果 对 $10^9 + 7$ 取余 后返回。
 
@@ -19,7 +19,7 @@ Tag : 「贪心」、「模拟」
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2020/05/30/leetcode_max_area_2.png)
 
 ```
-输入：h = 5, w = 4, horizontalCuts = [1,2,4], verticalCuts = [1,3]
+输入：h = 5, w = 4, hs = [1,2,4], vs = [1,3]
 
 输出：4 
 
@@ -27,8 +27,9 @@ Tag : 「贪心」、「模拟」
 ```
 示例 2：
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2020/05/30/leetcode_max_area_3.png)
+
 ```
-输入：h = 5, w = 4, horizontalCuts = [3,1], verticalCuts = [1]
+输入：h = 5, w = 4, hs = [3,1], vs = [1]
 
 输出：6
 
@@ -36,25 +37,23 @@ Tag : 「贪心」、「模拟」
 ```
 示例 3：
 ```
-输入：h = 5, w = 4, horizontalCuts = [3], verticalCuts = [3]
+输入：h = 5, w = 4, hs = [3], vs = [3]
 
 输出：9
 ```
 
 提示：
 * $2 <= h, w <= 10^9$
-* $1 <= horizontalCuts.length <= \min(h - 1, 10^5)$
-* $1 <= verticalCuts.length <= \min(w - 1, 10^5)$
-* $1 <= horizontalCuts[i] < h$
-* $1 <= verticalCuts[i] < w$
-* 题目数据保证 `horizontalCuts` 中的所有元素各不相同
-* 题目数据保证 `verticalCuts` 中的所有元素各不相同
+* $1 <= hs.length <= \min(h - 1, 10^5)$
+* $1 <= vs.length <= \min(w - 1, 10^5)$
+* $1 <= hs[i] < h$
+* $1 <= vs[i] < w$
+* 题目数据保证 `hs` 中的所有元素各不相同
+* 题目数据保证 `vs` 中的所有元素各不相同
 
 ---
 
 ### 贪心 
-
-为了方便，记 `horizontalCuts` 为 `hs`，记 `verticalCuts` 为 `vs`。
 
 由于求是“最大”蛋糕面积，**水平/垂直方向的连续段必然由「同方向且相邻」的切割位置（或是蛋糕边界）所构成**。
 
@@ -86,21 +85,6 @@ class Solution {
     }
 }
 ```
-Python 代码：
-```Python
-class Solution:
-    def maxArea(self, h: int, w: int, hs: List[int], vs: List[int]) -> int:
-        MOD = 10 ** 9 + 7
-        hs.sort()
-        vs.sort()
-        n, m = len(hs), len(vs)
-        mh, mv = max(hs[0], h - hs[n - 1]), max(vs[0], w - vs[m - 1])
-        for i in range(1, n):
-            mh = max(mh, hs[i] - hs[i - 1])
-        for i in range(1, m):
-            mv = max(mv, vs[i] - vs[i - 1])
-        return (mh * mv) % MOD
-```
 C++ 代码：
 ```C++
 class Solution {
@@ -116,6 +100,21 @@ public:
         return (mh * 1L * mv) % MOD;
     }
 };
+```
+Python 代码：
+```Python
+class Solution:
+    def maxArea(self, h: int, w: int, hs: List[int], vs: List[int]) -> int:
+        MOD = 10 ** 9 + 7
+        hs.sort()
+        vs.sort()
+        n, m = len(hs), len(vs)
+        mh, mv = max(hs[0], h - hs[n - 1]), max(vs[0], w - vs[m - 1])
+        for i in range(1, n):
+            mh = max(mh, hs[i] - hs[i - 1])
+        for i in range(1, m):
+            mv = max(mv, vs[i] - vs[i - 1])
+        return (mh * mv) % MOD
 ```
 TypeScript 代码：
 ```TypeScript
