--- a/LeetCode/1761-1770/1766. 互质树（困难）.md
+++ b/LeetCode/1761-1770/1766. 互质树（困难）.md
@@ -7,55 +7,61 @@ Tag : 「DFS」
 
 
 
-给你一个 n 个节点的树（也就是一个无环连通无向图），节点编号从 0 到 n - 1 ，且恰好有 n - 1 条边，每个节点有一个值。树的 根节点 为 0 号点。
+给你一个 `n` 个节点的树（也就是一个无环连通无向图），节点编号从 `0` 到 `n - 1`，且恰好有 `n - 1` 条边，每个节点有一个值，树的根节点为 `0` 号点。
 
-给你一个整数数组 nums 和一个二维数组 edges 来表示这棵树。nums[i] 表示第 i 个点的值，edges[j] = [uj, vj] 表示节点 uj 和节点 vj 在树中有一条边。
+给你一个整数数组 `nums` 和一个二维数组 `edges` 来表示这棵树。
 
-当 gcd(x, y) == 1 ，我们称两个数 x 和 y 是 互质的 ，其中 gcd(x, y) 是 x 和 y 的 最大公约数 。
+`nums[i]` 表示第 `i` 个点的值，$edges[j] = [u_{j}, v_{j}]$ 表示节点 $u_{j}$ 和节点 $v_{j}$ 在树中有一条边。
 
-从节点 i 到 根 最短路径上的点都是节点 i 的祖先节点。一个节点 不是 它自己的祖先节点。
+当 `gcd(x, y) == 1`，我们称两个数 `x` 和 `y` 是 互质的 ，其中 `gcd(x, y)` 是 `x` 和 `y` 的最大公约数。
 
-请你返回一个大小为 n 的数组 ans ，其中 ans[i]是离节点 i 最近的祖先节点且满足 nums[i] 和 nums[ans[i]] 是 互质的 ，如果不存在这样的祖先节点，ans[i] 为 -1 。
+从节点 `i` 到根最短路径上的点都是节点 `i` 的祖先节点，一个节点不是它自己的祖先节点。
+
+请你返回一个大小为 `n` 的数组 `ans`，其中 `ans[i]` 是离节点 `i` 最近的祖先节点且满足 `nums[i]` 和 `nums[ans[i]]` 是互质的，如果不存在这样的祖先节点，`ans[i]` 为 `-1`。
 
 示例 1：
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2021/02/20/untitled-diagram.png)
 
 ```
 输入：nums = [2,3,3,2], edges = [[0,1],[1,2],[1,3]]
+
 输出：[-1,0,0,1]
+
 解释：上图中，每个节点的值在括号中表示。
 - 节点 0 没有互质祖先。
 - 节点 1 只有一个祖先节点 0 。它们的值是互质的（gcd(2,3) == 1）。
 - 节点 2 有两个祖先节点，分别是节点 1 和节点 0 。节点 1 的值与它的值不是互质的（gcd(3,3) == 3）但节点 0 的值是互质的(gcd(2,3) == 1)，所以节点 0 是最近的符合要求的祖先节点。
 - 节点 3 有两个祖先节点，分别是节点 1 和节点 0 。它与节点 1 互质（gcd(3,2) == 1），所以节点 1 是离它最近的符合要求的祖先节点。
 ```
+
 示例 2：
 ![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2021/02/20/untitled-diagram1.png)
 ```
 输入：nums = [5,6,10,2,3,6,15], edges = [[0,1],[0,2],[1,3],[1,4],[2,5],[2,6]]
+
 输出：[-1,0,-1,0,0,0,-1]
 ```
 
 提示：
-* nums.length == n
-* 1 <= nums[i] <= 50
-* 1 <= n <= $10^5$
-* edges.length == n - 1
-* edges[j].length == 2
-* 0 <= uj, vj < n
-* uj != vj
+* $nums.length = n$
+* $1 <= nums[i] <= 50$
+* $1 <= n <= 10^5$
+* $edges.length = n - 1$
+* $edges[j].length = 2$
+* $0 <= u_{j}, v_{j} < n$
+* $u_{j} \neq v_{j}$
 
 ---
 
-### 基本思路
+### DFS 
 
 题目描述很长，但其实就是说每个节点从下往上找，找到最近的「与其互质」的节点。
 
 数据范围是 $10^5$，如果每个节点都直接往上找最近「互质」祖宗节点的话，当树为线性时，复杂度是 $O(n^2)$ ，会超时。
 
-因此我们要利用 nums[i] 范围只有 50 的特性。
+因此我们要利用 $nums[i]$ 范围只有 $50$ 的特性。
 
-我们可以先预处理除 [1, 50] 范围内的每个数，求出他们互质的数有哪些，存到一个字典里。
+我们可以先预处理除 $[1, 50]$ 范围内的每个数，求出他们互质的数有哪些，存到一个字典里。
 
 那么对于某个节点而言，假设节点的值为 `x` ，所在层数为 `y`。
 
@@ -63,12 +69,7 @@ Tag : 「DFS」
 
 用 `dep[x]` 表示距离值为 `x` 的节点最近的层是多少；`pos[x]` 代表具体的节点编号。
 
-***
-
-### DFS 解法
-
 代码：
-
 ```java
 class Solution {
     int[] ans;
