--- a/LeetCode/1781-1790/1781. 所有子字符串美丽值之和（中等）.md
+++ b/LeetCode/1781-1790/1781. 所有子字符串美丽值之和（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1781. 所有子字符串美丽值之和](https://acoier.com/2022/12/12/1780.%20%E5%88%A4%E6%96%AD%E4%B8%80%E4%B8%AA%E6%95%B0%E5%AD%97%E6%98%AF%E5%90%A6%E5%8F%AF%E4%BB%A5%E8%A1%A8%E7%A4%BA%E6%88%90%E4%B8%89%E7%9A%84%E5%B9%82%E7%9A%84%E5%92%8C%EF%BC%88%E4%B8%AD%E7%AD%89%EF%BC%89/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[1781. 所有子字符串美丽值之和]()** ，难度为 **中等**。
 
 Tag : 「模拟」、「哈希表」
 
@@ -70,6 +70,53 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public: 
+    int beautySum(string s) {
+        int n = s.size(), cnts[26], ans = 0;
+        unordered_map<int, int> map;
+        for(int i = 0; i < n; ++i) {
+            memset(cnts, 0, sizeof(cnts));
+            map.clear();
+            int min = -1, maxv = -1;
+            for(int j = i; j < n; ++j) {
+                int c = s[j] - 'a';
+                map[cnts[c]]--; map[cnts[c] + 1]++;
+                cnts[c]++;
+                if(cnts[c] == 1) min = 1;    
+                else if(map[min] <= 0) min++;
+                maxv = max(maxv, cnts[c]);
+                ans += maxv - min;
+            }
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python 
+class Solution:
+    def beautySum(self, s: str) -> int:
+        n, ans = len(s), 0
+        for i in range(n):
+            cnts = [0] * 26
+            dmap = defaultdict(int)
+            maxv, minv = -1, -1
+            for j in range(i, n):
+                c = ord(s[j]) - ord('a')
+                dmap[cnts[c]] -= 1
+                dmap[cnts[c] + 1] += 1
+                cnts[c] += 1
+                if cnts[c] == 1:
+                    minv = 1
+                elif dmap[minv] <= 0:
+                    minv += 1
+                maxv = max(maxv, cnts[c])
+                ans += maxv - minv
+        return ans
+```
 TypeScript 代码：
 ```TypeScript 
 function beautySum(s: string): number {
@@ -93,28 +140,6 @@ function beautySum(s: string): number {
     }
     return ans
 }
-```
-Python 代码：
-```Python 
-class Solution:
-    def beautySum(self, s: str) -> int:
-        n, ans = len(s), 0
-        for i in range(n):
-            cnts = [0] * 26
-            dmap = defaultdict(int)
-            maxv, minv = -1, -1
-            for j in range(i, n):
-                c = ord(s[j]) - ord('a')
-                dmap[cnts[c]] -= 1
-                dmap[cnts[c] + 1] += 1
-                cnts[c] += 1
-                if cnts[c] == 1:
-                    minv = 1
-                elif dmap[minv] <= 0:
-                    minv += 1
-                maxv = max(maxv, cnts[c])
-                ans += maxv - minv
-        return ans
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(C)$，其中 $C = 26$ 为字符集大小
