--- a/LeetCode/231-240/235. 二叉搜索树的最近公共祖先（中等）.md
+++ b/LeetCode/231-240/235. 二叉搜索树的最近公共祖先（中等）.md
@@ -42,7 +42,7 @@ Tag : 「二叉树」、「DFS」、「递归」
 
 ### DFS
 
-也是常见的 `LCA` 问题，但相比 [236. 二叉树的最近公共祖先]()，本题搜索对象为二叉搜索树，利用此特性，我们可以将搜索复杂度从 $O(n)$ 优化至 $O(h)$。
+也是常见的 `LCA` 问题，但相比 [236. 二叉树的最近公共祖先](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247500218&idx=1&sn=a6d790dcecfee353be5f3b53c312c3d4&chksm=fd9f6aa5cae8e3b36d85448674b189ed2d35fdce18381ac7676ec90a33d62da05718f85e3103#rd)，本题搜索对象为二叉搜索树，利用此特性，我们可以将搜索复杂度从 $O(n)$ 优化至 $O(h)$。
 
 利用原函数作为递归函数，复用 `root` 作为搜索过程中的当前节点，根据 `root` 和两节点关系进行分情况讨论：
 
