--- a/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
+++ b/LeetCode/2331-2340/2335. 装满杯子需要的最短总时长（简单）.md
@@ -61,7 +61,7 @@ Tag : 「排序」、「递归」、「模拟」、「贪心」、「数学」
 
 为了尽可能的凑成多的对数，我们可以每次取剩余数量最多且不为 `0` 的两类水进行成组（因此每次处理前需要先对当前 `amount` 进行排序），直到没有水剩余，或只有一类水的剩余数据量不为 `0`（剩下的水只能独自生成）。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int fillCups(int[] amount) {
@@ -71,6 +71,39 @@ class Solution {
         return 1 + fillCups(amount);
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int fillCups(vector<int>& amount) {
+        sort(amount.begin(), amount.end());
+        if (amount[1] == 0) return amount[2];
+        amount[1]--; amount[2]--;
+        return 1 + fillCups(amount);
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def fillCups(self, amount: List[int]) -> int:
+        amount.sort()
+        if amount[1] == 0:
+            return amount[2]
+        amount[1] -= 1
+        amount[2] -= 1
+        return 1 + self.fillCups(amount)
+```
+TypeScript 代码：
+```TypeScript
+function fillCups(amount: number[]): number {
+    amount.sort((a, b) => a - b);
+    if (amount[1] === 0) return amount[2];
+    amount[1] -= 1;
+    amount[2] -= 1;
+    return 1 + fillCups(amount);
+};
 ```
 * 时间复杂度：由于 `amount` 的长度固定为 `3`，因此排序消耗可视为常量；每次至少会消耗两杯水，直到递归结束或只剩下一种水。复杂度为 $O(\sum_{i = 0}^{2} amount[i])$
 * 空间复杂度：忽略递归和排序带来的额外空间开销，复杂度为 $O(1)$
@@ -95,7 +128,7 @@ class Solution {
 	
 	最后，为了处理 $t$ 的奇偶性问题，先用 $a$ 和 $b$ 进行 $\left \lceil \frac{a + b - c}{2} \right \rceil$ 抵消操作，再与 $c$ 进行抵消
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int fillCups(int[] amount) {
@@ -106,7 +139,39 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(1)$
+C++ 代码：
+```C++
+class Solution {
+public:
+    int fillCups(vector<int>& amount) {
+        sort(amount.begin(), amount.end());
+        int a = amount[0], b = amount[1], c = amount[2];
+        if (a + b <= c) return c;
+        else return (a + b - c + 1) / 2 + c;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def fillCups(self, amount: List[int]) -> int:
+        amount.sort()
+        a, b, c = amount
+        if a + b <= c:
+            return c
+        else:
+            return (a + b - c + 1) // 2 + c
+```
+TypeScript 代码：
+```TypeScript
+function fillCups(amount: number[]): number {
+    amount.sort((a, b) => a - b);
+    const [a, b, c] = amount;
+    if (a + b <= c) return c;    
+    else return Math.floor((a + b - c + 1) / 2) + c; 
+};
+```
+* 时间复杂度：由于 `amount` 的长度固定为 `3`，因此排序消耗可视为常量，整体复杂度为 $O(1)$
 * 空间复杂度：$O(1)$
 
 ---
