--- a/LeetCode/2331-2340/2336. 无限集中的最小数字（中等）.md
+++ b/LeetCode/2331-2340/2336. 无限集中的最小数字（中等）.md
@@ -141,6 +141,33 @@ class SmallestInfiniteSet:
             heapq.heappush(self.q, x)
             self.vis[x] = True
 ```
+TypeScript 代码：
+```TypeScript
+class SmallestInfiniteSet {
+    vis: boolean[] = Array(1010).fill(false);
+    q: number[] = [];
+    idx: number = 1;
+    popSmallest(): number {
+        let ans: number = -1;
+        if (this.q.length !== 0) {
+            ans = this.q.sort((a, b) => a - b).shift() as number;
+            this.vis[ans] = false;
+        } else {
+            ans = this.idx++;
+        }
+        return ans;
+    }
+    addBack(x: number): void {
+        if (x >= this.idx || this.vis[x]) return;
+        if (x == this.idx - 1) {
+            this.idx--;
+        } else {
+            this.q.push(x);
+            this.vis[x] = true;
+        }
+    }
+}
+```
 * 时间复杂度：插入和取出的最坏复杂度为 $O(\log{n})$
 * 空间复杂度：$O(n)$
 
