--- a/LeetCode/581-590/583. 两个字符串的删除操作（中等）.md
+++ b/LeetCode/581-590/583. 两个字符串的删除操作（中等）.md
@@ -6,7 +6,7 @@ Tag : 「最长公共子序列」、「序列 DP」
 
 
 
-给定两个单词 `word1` 和 `word2`，找到使得 `word1` 和 `word2` 相同所需的最小步数，每步可以删除任意一个字符串中的一个字符。
+给定两个单词 `s1` 和 `s2`，找到使得 `s1` 和 `s2` 相同所需的最小步数，每步可以删除任意一个字符串中的一个字符。
 
 示例：
 
@@ -49,7 +49,7 @@ Tag : 「最长公共子序列」、「序列 DP」
 
 通常会习惯性往字符串头部追加一个空格，以减少边界判断（使下标从 1 开始，并很容易构造出可滚动的「有效值」）。但实现上，不用真的往字符串中最佳空格，只需在初始化动规值时假定存在首部空格，以及对最后的 LCS 长度进行减一操作即可。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int minDistance(String s1, String s2) {
@@ -70,6 +70,57 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minDistance(string s1, string s2) {
+        int n = s1.size(), m = s2.size();
+        vector<vector<int>> f(n + 1, vector<int>(m + 1));
+        for (int i = 0; i <= n; i++) f[i][0] = 1;
+        for (int j = 0; j <= m; j++) f[0][j] = 1;
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                f[i][j] = max(f[i - 1][j], f[i][j - 1]);
+                if (s1[i - 1] == s2[j - 1]) f[i][j] = max(f[i][j], f[i - 1][j - 1] + 1);
+            }
+        }
+        int max = f[n][m] - 1;
+        return n - max + m - max;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minDistance(self, s1: str, s2: str) -> int:
+        n, m = len(s1), len(s2)
+        f = [[1]* (m + 1) for _ in range(n + 1)]
+        for i in range(1, n + 1):
+            for j in range(1, m + 1):
+                f[i][j] = max(f[i - 1][j], f[i][j - 1])
+                if s1[i - 1] == s2[j - 1]:
+                    f[i][j] = max(f[i][j], f[i - 1][j - 1] + 1)
+        max_val = f[n][m] - 1
+        return n - max_val + m - max_val
+```
+TypeScript 代码：
+```TypeScript
+function minDistance(s1: string, s2: string): number {
+    const n = s1.length, m = s2.length;
+    const f: number[][] = Array(n + 1).fill(0).map(() => Array(m + 1).fill(1));
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            f[i][j] = Math.max(f[i - 1][j], f[i][j - 1]);
+            if (s1[i - 1] === s2[j - 1]) {
+                f[i][j] = Math.max(f[i][j], f[i - 1][j - 1] + 1);
+            }
+        }
+    }
+    const max = f[n][m] - 1;
+    return n - max + m - max;  
+};
+```
 * 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(n \times m)$
 
@@ -88,7 +139,7 @@ class Solution {
 
 $f[i][j]$ 为上述方案中的最小值，最终答案为 $f[n][m]$。
 
-代码：
+Java 代码：
 ```Java
 class Solution {
     public int minDistance(String s1, String s2) {
@@ -106,6 +157,58 @@ class Solution {
         return f[n][m];
     }
 }
+```
+C++ 代码：
+```C++
+class Solution {
+public:
+    int minDistance(string s1, string s2) {
+        int n = s1.size(), m = s2.size();
+        vector<vector<int>> f(n + 1, vector<int>(m + 1));
+        for(int i = 0; i <= n; i++) f[i][0] = i;
+        for(int j = 0; j <= m; j++) f[0][j] = j;
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                f[i][j] = min(f[i - 1][j] + 1, f[i][j - 1] + 1);
+                if (s1[i - 1] == s2[j - 1]) f[i][j] = min(f[i][j], f[i - 1][j - 1]);
+            }
+        }
+        return f[n][m];
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def minDistance(self, s1: str, s2: str) -> int:
+        n, m = len(s1), len(s2)
+        f = [[0]* (m + 1) for _ in range(n + 1)]
+        for i in range(n + 1):
+            f[i][0] = i
+        for i in range(m + 1): 
+            f[0][i] = i
+        for i in range(1, n + 1):
+            for j in range(1, m + 1):
+                f[i][j] = min(f[i - 1][j] + 1, f[i][j - 1] + 1)
+                if s1[i - 1] == s2[j - 1]:
+                    f[i][j] = min(f[i][j], f[i - 1][j - 1])
+        return f[n][m]
+```
+TypeScript 代码：
+```TypeScript
+function minDistance(s1: string, s2: string): number {
+    const n = s1.length, m = s2.length;
+    const f: number[][] = Array.from({length: n + 1}, () => Array(m + 1).fill(0));
+    for(let i = 0; i <= n; i++) f[i][0] = i;
+    for(let i = 0; i <= m; i++) f[0][i] = i;
+    for (let i = 1; i <= n; i++) {
+        for (let j = 1; j <= m; j++) {
+            f[i][j] = Math.min(f[i - 1][j] + 1, f[i][j - 1] + 1);
+            if (s1.charAt(i - 1) == s2.charAt(j - 1)) f[i][j] = Math.min(f[i][j], f[i - 1][j - 1]);
+        }
+    }
+    return f[n][m];
+};
 ```
 * 时间复杂度：$O(n \times m)$
 * 空间复杂度：$O(n \times m)$
