--- a/LeetCode/791-800/792. 匹配子序列的单词数（中等）.md
+++ b/LeetCode/791-800/792. 匹配子序列的单词数（中等）.md
@@ -8,7 +8,7 @@ Tag : 「二分」、「哈希表」
 
 给定字符串 `s` 和字符串数组 `words`, 返回  `words[i]` 中是 `s` 的子序列的单词个数 。
 
-字符串的 子序列 是从原始字符串中生成的新字符串，可以从中删去一些字符(可以是`""`)，而不改变其余字符的相对顺序。
+字符串的子序列是从原始字符串中生成的新字符串，可以从中删去一些字符(可以是`""`)，而不改变其余字符的相对顺序。
 
 例如， `“ace”` 是 `“abcde”` 的子序列。
 
@@ -119,7 +119,7 @@ function numMatchingSubseq(s: string, words: string[]): number {
 }
 ```
 Python3 代码：
-```Python3
+```Python
 class Solution:
     def numMatchingSubseq(self, s: str, words: List[str]) -> int:
         dmap = defaultdict(list)
