--- a/LeetCode/801-810/809. 情感丰富的文字（中等）.md
+++ b/LeetCode/801-810/809. 情感丰富的文字（中等）.md
@@ -8,9 +8,15 @@ Tag : 「双指针」、「模拟」
 
 有时候人们会用重复写一些字母来表示额外的感受，比如 `"hello" -> "heeellooo", "hi" -> "hiii"`。我们将相邻字母都相同的一串字符定义为相同字母组，例如：`"h", "eee", "ll", "ooo"`。
 
-对于一个给定的字符串 `S` ，如果另一个单词能够通过将一些字母组扩张从而使其和 `S` 相同，我们将这个单词定义为可扩张的（`stretchy`）。扩张操作定义如下：选择一个字母组（包含字母 `c` ），然后往其中添加相同的字母 `c` 使其长度达到 `3` 或以上。
+对于一个给定的字符串 `S` ，如果另一个单词能够通过将一些字母组扩张从而使其和 `S` 相同，我们将这个单词定义为可扩张的（`stretchy`）。
 
-例如，以 `"hello"` 为例，我们可以对字母组 `"o"` 扩张得到 `"hellooo"`，但是无法以同样的方法得到 `"helloo"` 因为字母组 `"oo"` 长度小于 `3`。此外，我们可以进行另一种扩张 `"ll" -> "lllll"` 以获得 `"helllllooo"`。如果 `S = "helllllooo"`，那么查询词 `"hello"` 是可扩张的，因为可以对它执行这两种扩张操作使得 `query = "hello" -> "hellooo" -> "helllllooo" = S`。
+扩张操作定义如下：选择一个字母组（包含字母 `c` ），然后往其中添加相同的字母 `c` 使其长度达到 `3` 或以上。
+
+例如，以 `"hello"` 为例：
+
+我们可以对字母组 `"o"` 扩张得到 `"hellooo"`，但是无法以同样的方法得到 `"helloo"` 因为字母组 `"oo"` 长度小于 `3`。此外，我们可以进行另一种扩张 `"ll" -> "lllll"` 以获得 `"helllllooo"`。
+
+如果 `S = "helllllooo"`，那么查询词 `"hello"` 是可扩张的，因为可以对它执行这两种扩张操作使得 `query = "hello" -> "hellooo" -> "helllllooo" = S`。
 
 输入一组查询单词，输出其中可扩张的单词数量。
 
@@ -70,25 +76,28 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function expressiveWords(s: string, words: string[]): number {
-    let n = s.length, ans = 0
-    out:for (const word of words) {
-        let m = word.length, i = 0, j = 0
-        while (i < n && j < m) {
-            if (s[i] != word[j]) continue out
-            let a = i, b = j
-            while (a < n && s[a] == s[i]) a++
-            while (b < m && word[b] == word[j]) b++
-            a -= i; b -= j;
-            if (a != b && (b > a || a < 3)) continue out
-            i += a; j += b;
+C++ 代码：
+```C++
+class Solution {
+public:
+    int expressiveWords(string s, vector<string>& words) {
+        int n = s.size(), ans = 0;
+        for (const string &word : words) {
+            int m = word.size(), i = 0, j = 0;
+            while (i < n && j < m) {
+                if (s[i] != word[j]) break;
+                int a = i, b = j;
+                while (a < n && s[a] == s[i]) a++;
+                while (b < m && word[b] == word[j]) b++;
+                a -= i; b -= j;
+                if (a != b && (b > a || a < 3)) break;                
+                i += a; j += b;
+                if (i == n && j == m) ans++;
+            }
         }
-        if (i == n && j == m) ans++;
+        return ans;
     }
-    return ans
-}
+};
 ```
 Python 代码：
 ```Python
@@ -113,6 +122,26 @@ class Solution:
             if ok and i == n and j == m:
                 ans += 1
         return ans
+```
+TypeScript 代码：
+```TypeScript
+function expressiveWords(s: string, words: string[]): number {
+    let n = s.length, ans = 0
+    out:for (const word of words) {
+        let m = word.length, i = 0, j = 0
+        while (i < n && j < m) {
+            if (s[i] != word[j]) continue out
+            let a = i, b = j
+            while (a < n && s[a] == s[i]) a++
+            while (b < m && word[b] == word[j]) b++
+            a -= i; b -= j;
+            if (a != b && (b > a || a < 3)) continue out
+            i += a; j += b;
+        }
+        if (i == n && j == m) ans++;
+    }
+    return ans
+}
 ```
 * 时间复杂度：$O(n \times m + \sum_{i = 0}^{m - 1}words[i].length)$，其中 `n` 为字符串 `s` 的长度，`m` 为数组 `words` 的长度
 * 空间复杂度：$O(1)$
