--- a/LeetCode/811-820/816. 模糊坐标（中等）.md
+++ b/LeetCode/811-820/816. 模糊坐标（中等）.md
@@ -96,6 +96,64 @@ class Solution {
     }
 }
 ```
+C++ 代码：
+```C++
+class Solution {
+public:
+    string s;
+    vector<string> ambiguousCoordinates(string _s) {
+        s = _s.substr(1, _s.size() - 2);
+        int n = s.size();
+        vector<string> ans;
+        for (int i = 0; i < n - 1; i++) {
+            vector<string> a = search(0, i), b = search(i + 1, n - 1);
+            for (auto &x : a) {
+                for (auto &y : b) {
+                    ans.push_back("(" + x + ", " + y + ")");
+                }
+            }
+        }
+        return ans;
+    }
+    vector<string> search(int start, int end) {
+        vector<string> ans;
+        if (start == end || s[start] != '0') ans.push_back(s.substr(start, end - start + 1));
+        for (int i = start; i < end; i++) {
+            string a = s.substr(start, i - start + 1), b = s.substr(i + 1, end - i);
+            if (a.size() > 1 && a[0] == '0') continue;
+            if (b.back() == '0') continue;
+            ans.push_back(a + "." + b);
+        }
+        return ans;
+    }
+};
+```
+Python 代码：
+```Python
+class Solution:
+    def ambiguousCoordinates(self, _s: str) -> List[str]:
+        def search(s, start, end):
+            ans = []
+            if start == end or s[start] != '0':
+                ans.append(s[start:end+1])
+            for i in range(start, end):
+                a, b = s[start:i+1], s[i+1:end+1]
+                if len(a) > 1 and a[0] == '0':
+                    continue
+                if b[-1] == '0':
+                    continue
+                ans.append(f'{a}.{b}')
+            return ans
+        s = _s[1:len(_s)-1]
+        n = len(s)
+        ans = []
+        for i in range(n - 1):
+            a, b = search(s, 0, i), search(s, i + 1, n - 1)
+            for x in a:
+                for y in b:
+                    ans.append(f'({x}, {y})')
+        return ans
+```
 TypeScript 代码：
 ```TypeScript
 function ambiguousCoordinates(_s: string): string[] {
@@ -123,32 +181,6 @@ function ambiguousCoordinates(_s: string): string[] {
     }
     return ans
 }
-```
-Python 代码：
-```Python3
-class Solution:
-    def ambiguousCoordinates(self, _s: str) -> List[str]:
-        def search(s, start, end):
-            ans = []
-            if start == end or s[start] != '0':
-                ans.append(s[start:end+1])
-            for i in range(start, end):
-                a, b = s[start:i+1], s[i+1:end+1]
-                if len(a) > 1 and a[0] == '0':
-                    continue
-                if b[-1] == '0':
-                    continue
-                ans.append(f'{a}.{b}')
-            return ans
-        s = _s[1:len(_s)-1]
-        n = len(s)
-        ans = []
-        for i in range(n - 1):
-            a, b = search(s, 0, i), search(s, i + 1, n - 1)
-            for x in a:
-                for y in b:
-                    ans.append(f'({x}, {y})')
-        return ans
 ```
 * 时间复杂度：$O(n^3)$
 * 空间复杂度：$O(n^3)$
