--- a/LeetCode/911-920/915. 分割数组（中等）.md
+++ b/LeetCode/911-920/915. 分割数组（中等）.md
@@ -12,7 +12,7 @@ Tag : 「模拟」
 * `left` 和 `right` 都是非空的。
 * `left` 的长度要尽可能小。
 
-在完成这样的分组后返回 `left` 的 长度 。
+在完成这样的分组后返回 `left` 的长度。
 
 用例可以保证存在这样的划分方法。
 
@@ -62,18 +62,23 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-function partitionDisjoint(nums: number[]): number {
-    const n = nums.length
-    const min = new Array<number>(n + 10).fill(nums[n - 1])
-    for (let i = n - 2; i >= 0; i--) min[i] = Math.min(min[i + 1], nums[i])
-    for (let i = 0, max = 0; i < n; i++) {
-        max = Math.max(max, nums[i])
-        if (max <= min[i + 1]) return i + 1
+C++ 代码：
+```C++
+class Solution {
+public:
+    int partitionDisjoint(vector<int>& nums) {
+        int n = nums.size();
+        vector<int> arr(n + 10);
+        arr[n - 1] = nums[n - 1];
+        for (int i = n - 2; i >= 0; i--) arr[i] = min(arr[i + 1], nums[i]);
+        int maxv = 0;
+        for (int i = 0; i < n - 1; i++) {
+            maxv = max(maxv, nums[i]);
+            if (maxv <= arr[i + 1]) return i + 1;
+        }
+        return -1; // never
     }
-    return -1
-}
+};
 ```
 Python 代码：
 ```Python
@@ -90,6 +95,19 @@ class Solution:
             if maxv <= minv[i + 1]:
                 return i + 1
         return -1
+```
+TypeScript 代码：
+```TypeScript
+function partitionDisjoint(nums: number[]): number {
+    const n = nums.length
+    const min = new Array<number>(n + 10).fill(nums[n - 1])
+    for (let i = n - 2; i >= 0; i--) min[i] = Math.min(min[i + 1], nums[i])
+    for (let i = 0, max = 0; i < n; i++) {
+        max = Math.max(max, nums[i])
+        if (max <= min[i + 1]) return i + 1
+    }
+    return -1
+}
 ```
 * 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
