--- a/LeetCode/931-940/934. 最短的桥（中等）.md
+++ b/LeetCode/931-940/934. 最短的桥（中等）.md
@@ -6,46 +6,44 @@ Tag : 「并查集」、「双向 BFS」
 
 
 
-给你一个大小为 `n x n` 的二元矩阵 `grid`，其中 `1` 表示陆地，`0` 表示水域。
+给你一个大小为 `n x n` 的二元矩阵 `g`，其中 `1` 表示陆地，`0` 表示水域。
 
-岛 是由四面相连的 `1` 形成的一个最大组，即不会与非组内的任何其他 `1` 相连。`grid` 中 恰好存在两座岛 。
+岛是由四面相连的 `1` 形成的一个最大组，即不会与非组内的任何其他 `1` 相连，`g` 中恰好存在两座岛。
 
-你可以将任意数量的 `0` 变为 `1` ，以使两座岛连接起来，变成 一座岛 。
+你可以将任意数量的 `0` 变为 `1` ，以使两座岛连接起来，变成一座岛。
 
 返回必须翻转的 `0` 的最小数目。
 
 示例 1：
 ```
-输入：grid = [[0,1],[1,0]]
+输入：g = [[0,1],[1,0]]
 
 输出：1
 ```
 示例 2：
 ```
-输入：grid = [[0,1,0],[0,0,0],[0,0,1]]
+输入：g = [[0,1,0],[0,0,0],[0,0,1]]
 
 输出：2
 ```
 示例 3：
 ```
-输入：grid = [[1,1,1,1,1],[1,0,0,0,1],[1,0,1,0,1],[1,0,0,0,1],[1,1,1,1,1]]
+输入：g = [[1,1,1,1,1],[1,0,0,0,1],[1,0,1,0,1],[1,0,0,0,1],[1,1,1,1,1]]
 
 输出：1
 ```
 
 提示：
-* $n = grid.length = grid[i].length$
+* $n = g.length = g[i].length$
 * $2 <= n <= 100$
-* `grid[i][j]` 为 `0` 或 `1`
-* `grid` 中恰有两个岛
+* `g[i][j]` 为 `0` 或 `1`
+* `g` 中恰有两个岛
 
 ---
 
 ### 并查集 + 双向 BFS
 
 **使用「并查集」将两个岛标记出来，然后将两个岛的点分别入队，再运用「双向 BFS」来找最短通路。**
-
-为了方便，我们将 `grid` 记为 `g`。
 
 对于所有满足 $g[i][j] = 1$ 的节点与其四联通的方向，值同为 $1$ 的节点进行并查集连通性维护。
 
@@ -128,78 +126,6 @@ class Solution {
     }
 }
 ```
-TypeScript 代码：
-```TypeScript
-let n: number
-const p = new Array<number>(10010).fill(0)
-const dirs = [[0,1],[0,-1],[1,0],[-1,0]]
-function shortestBridge(g: number[][]): number {
-    function getIdx(x: number, y: number): number {
-        return x * n + y
-    }
-    function find(x: number): number {
-        if (p[x] != x) p[x] = find(p[x])
-        return p[x]
-    }
-    function union(x: number, y: number): void {
-        p[find(x)] = p[find(y)]
-    }
-    function update(d: Array<Array<number>>, m1: Map<number, number>, m2: Map<number, number>): number {
-        let sz = d.length
-        while (sz-- > 0) {
-            const info = d.shift()
-            const x = info[0], y = info[1], idx = getIdx(x, y), step = m1.get(idx)
-            for (const di of dirs) {
-                const nx = x + di[0], ny = y + di[1], nidx = getIdx(nx, ny)
-                if (nx < 0 || nx >= n || ny < 0 || ny >= n) continue
-                if (m1.has(nidx)) continue
-                if (m2.has(nidx)) return step + 1 + m2.get(nidx)
-                d.push([nx, ny])
-                m1.set(nidx, step + 1)
-            }
-        }
-        return -1
-    }
-    n = g.length
-    for (let i = 0; i < n * n; i++) p[i] = i
-    for (let i = 0; i < n; i++) {
-        for (let j = 0; j < n; j++) {
-            if (g[i][j] == 0) continue
-            for (const di of dirs) {
-                const x = i + di[0], y = j + di[1]
-                if (x < 0 || x >= n || y < 0 || y >= n) continue
-                if (g[x][y] == 0) continue
-                union(getIdx(i, j), getIdx(x, y))
-            }
-        }
-    }
-    let a = -1, b = -1
-    const d1 = new Array<number[]>(), d2 = new Array<number[]>()
-    const m1 = new Map<number, number>(), m2 = new Map<number, number>()
-    for (let i = 0; i < n; i++) {
-        for (let j = 0; j < n; j++) {
-            if (g[i][j] == 0) continue
-            const idx = getIdx(i, j), root = find(idx)
-            if (a == -1) a = root
-            else if (a != root && b == -1) b = root
-            if (a == root) {
-                d1.push([i, j])
-                m1.set(idx, 0)
-            } else if (b == root) {
-                d2.push([i, j])
-                m2.set(idx, 0)
-            }
-        }
-    }
-    while (d1.length != 0 && d2.length != 0) {
-        let t = -1
-        if (d1.length < d2.length) t = update(d1, m1, m2)
-        else t = update(d2, m2, m1)
-        if (t != -1) return t - 1
-    }
-    return -1
-}
-```
 Python 代码：
 ```Python
 import queue
@@ -277,6 +203,78 @@ class Solution:
             if t != -1:
                 return t - 1
         return -1
+```
+TypeScript 代码：
+```TypeScript
+let n: number
+const p = new Array<number>(10010).fill(0)
+const dirs = [[0,1],[0,-1],[1,0],[-1,0]]
+function shortestBridge(g: number[][]): number {
+    function getIdx(x: number, y: number): number {
+        return x * n + y
+    }
+    function find(x: number): number {
+        if (p[x] != x) p[x] = find(p[x])
+        return p[x]
+    }
+    function union(x: number, y: number): void {
+        p[find(x)] = p[find(y)]
+    }
+    function update(d: Array<Array<number>>, m1: Map<number, number>, m2: Map<number, number>): number {
+        let sz = d.length
+        while (sz-- > 0) {
+            const info = d.shift()
+            const x = info[0], y = info[1], idx = getIdx(x, y), step = m1.get(idx)
+            for (const di of dirs) {
+                const nx = x + di[0], ny = y + di[1], nidx = getIdx(nx, ny)
+                if (nx < 0 || nx >= n || ny < 0 || ny >= n) continue
+                if (m1.has(nidx)) continue
+                if (m2.has(nidx)) return step + 1 + m2.get(nidx)
+                d.push([nx, ny])
+                m1.set(nidx, step + 1)
+            }
+        }
+        return -1
+    }
+    n = g.length
+    for (let i = 0; i < n * n; i++) p[i] = i
+    for (let i = 0; i < n; i++) {
+        for (let j = 0; j < n; j++) {
+            if (g[i][j] == 0) continue
+            for (const di of dirs) {
+                const x = i + di[0], y = j + di[1]
+                if (x < 0 || x >= n || y < 0 || y >= n) continue
+                if (g[x][y] == 0) continue
+                union(getIdx(i, j), getIdx(x, y))
+            }
+        }
+    }
+    let a = -1, b = -1
+    const d1 = new Array<number[]>(), d2 = new Array<number[]>()
+    const m1 = new Map<number, number>(), m2 = new Map<number, number>()
+    for (let i = 0; i < n; i++) {
+        for (let j = 0; j < n; j++) {
+            if (g[i][j] == 0) continue
+            const idx = getIdx(i, j), root = find(idx)
+            if (a == -1) a = root
+            else if (a != root && b == -1) b = root
+            if (a == root) {
+                d1.push([i, j])
+                m1.set(idx, 0)
+            } else if (b == root) {
+                d2.push([i, j])
+                m2.set(idx, 0)
+            }
+        }
+    }
+    while (d1.length != 0 && d2.length != 0) {
+        let t = -1
+        if (d1.length < d2.length) t = update(d1, m1, m2)
+        else t = update(d2, m2, m1)
+        if (t != -1) return t - 1
+    }
+    return -1
+}
 ```
 * 时间复杂度：$O(n^2)$
 * 空间复杂度：$O(n^2)$
